tests/snapshots/snapshots__budget_commander_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4001 tokens)

Readme.md
     1→# Commander.js
    61→## Installation
    67→## Quick Start
   147→## Declaring _program_ variable
   177→## Options
   523→## Commands
   754→## Automated help
   956→## Custom event listeners
   966→## Bits and pieces
  1164→## Support

lib/argument.js
     3→class Argument {
    13→  constructor(name, description) {
    48→  name() {
    56→  _collectValue(value, previous) {
    73→  default(value, description) {
    86→  argParser(fn) {
    98→  choices(values) {
   119→  argRequired() {
   129→  argOptional() {
   143→function humanReadableArgName(arg) {

lib/command.js
    20→  constructor(name) {
    99→  copyInheritedSettings(sourceCommand) {
   155→  command(nameAndArgs, actionOptsOrExecDesc, execOpts) {
   192→  createCommand(name) {
   203→  createHelp() {
   215→  configureHelp(configuration) {
   245→  configureOutput(configuration) {
   261→  showHelpAfterError(displayHelp = true) {
   273→  showSuggestionAfterError(displaySuggestion = true) {
   288→  addCommand(cmd, opts) {
   316→  createArgument(name, description) {
   336→  argument(name, description, parseArg, defaultValue) {
   359→  arguments(names) {
   375→  addArgument(argument) {
   409→  helpCommand(enableOrNameAndArgs, description) {
   443→  addHelpCommand(helpCommand, deprecatedDescription) {
   487→  hook(event, listener) {
   508→  exitOverride(fn) {
   556→  action(fn) {
   585→  createOption(flags, description) {
   670→  addOption(option) {
   788→  option(flags, description, parseArg, defaultValue) {
   805→  requiredOption(flags, description, parseArg, defaultValue) {
   826→  combineFlagAndOptionalValue(combine = true) {
   837→  allowUnknownOption(allowUnknown = true) {
   848→  allowExcessArguments(allowExcess = true) {
   861→  enablePositionalOptions(positional = true) {
   875→  passThroughOptions(passThrough = true) {
   905→  storeOptionsAsProperties(storeAsProperties = true) {
   925→  getOptionValue(key) {
   940→  setOptionValue(key, value) {
   953→  setOptionValueWithSource(key, value, source) {
   971→  getOptionValueSource(key) {
   983→  getOptionValueSourceWithGlobals(key) {
  1090→  parse(argv, parseOptions) {
  1119→  async parseAsync(argv, parseOptions) {
  1141→  saveStateBeforeParse() {
  1158→  restoreStateBeforeParse() {
  1748→  parseOptions(args) {
  1902→  opts() {
  1924→  optsWithGlobals() {
  1940→  error(message, errorOptions) {
  2034→  missingArgument(name) {
  2046→  optionMissingArgument(option) {
  2058→  missingMandatoryOptionValue(option) {
  2114→  unknownOption(flag) {
  2162→  unknownCommand() {
  2195→  version(str, flags, description) {
  2218→  description(str, argsDescription) {
  2234→  summary(str) {
  2249→  alias(alias) {
  2289→  aliases(aliases) {
  2304→  usage(str) {
  2331→  name(str) {
  2344→  helpGroup(heading) {
  2363→  commandsGroup(heading) {
  2382→  optionsGroup(heading) {
  2419→  nameFromFilename(filename) {
  2437→  executableDir(path) {
  2450→  helpInformation(contextOptions) {
  2505→  outputHelp(contextOptions) {
  2559→  helpOption(flags, description) {
  2607→  addHelpOption(option) {
  2621→  help(contextOptions) {
  2656→  addHelpText(position, text) {

lib/error.js
     4→class CommanderError extends Error {
    11→  constructor(exitCode, code, message) {
    25→class InvalidArgumentError extends CommanderError {
    30→  constructor(message) {

lib/help.js
    12→class Help {
    13→  constructor() {
    29→  prepareContext(contextOptions) {
    40→  visibleCommands(cmd) {
    62→  compareOptions(a, b) {
    79→  visibleOptions(cmd) {
   112→  visibleGlobalOptions(cmd) {
   139→  visibleArguments(cmd) {
   162→  subcommandTerm(cmd) {
   182→  optionTerm(option) {
   193→  argumentTerm(argument) {
   205→  longestSubcommandTermLength(cmd, helper) {
   224→  longestOptionTermLength(cmd, helper) {
   241→  longestGlobalOptionTermLength(cmd, helper) {
   258→  longestArgumentTermLength(cmd, helper) {
   276→  commandUsage(cmd) {
   300→  commandDescription(cmd) {
   313→  subcommandDescription(cmd) {
   325→  optionDescription(option) {
   372→  argumentDescription(argument) {
   403→  formatItemList(heading, items, helper) {
   417→  groupItems(unsortedItems, visibleItems, getGroup) {
   443→  formatHelp(cmd, helper) {
   535→  displayWidth(str) {
   545→  styleTitle(str) {
   549→  styleUsage(str) {
   563→  styleCommandDescription(str) {
   566→  styleOptionDescription(str) {
   569→  styleSubcommandDescription(str) {
   572→  styleArgumentDescription(str) {
   575→  styleDescriptionText(str) {
   578→  styleOptionTerm(str) {
   581→  styleSubcommandTerm(str) {
   594→  styleArgumentTerm(str) {
   597→  styleOptionText(str) {
   600→  styleArgumentText(str) {
   603→  styleSubcommandText(str) {
   606→  styleCommandText(str) {
   618→  padWidth(cmd, helper) {
   633→  preformatted(str) {
   650→  formatItem(term, termWidth, description, helper) {
   695→  boxWrap(str, width) {
   740→function stripColor(str) {

lib/option.js
     3→class Option {
    11→  constructor(flags, description) {
    47→  default(value, description) {
    65→  preset(arg) {
    82→  conflicts(names) {
   100→  implies(impliedOptionValues) {
   120→  env(name) {
   132→  argParser(fn) {
   144→  makeOptionMandatory(mandatory = true) {
   156→  hideHelp(hide = true) {
   165→  _collectValue(value, previous) {
   181→  choices(values) {
   203→  name() {
   217→  attributeName() {
   230→  helpGroup(heading) {
   243→  is(arg) {
   256→  isBoolean() {
   268→class DualOptions {
   272→  constructor(options) {
   297→  valueFromOption(value, option) {
   316→function camelcase(str) {
   328→function splitOptionFlags(flags) {

package-support.json
     2→  "versions": [

package.json

tsconfig.js.json
     7→  "extends": "./tsconfig.json",
     8→  "include": [

tsconfig.json
    12→  "compilerOptions": {
    33→  "include": [
    43→  "exclude": ["node_modules"],

tsconfig.ts.json
     8→  "extends": "./tsconfig.json",
     9→  "compilerOptions": {
    15→  "include": [

typings/index.d.ts
    16→export class CommanderError extends Error {
    28→  constructor(exitCode: number, code: string, message: string);
    31→export class InvalidArgumentError extends CommanderError {
    36→  constructor(message: string);
    40→export interface ErrorOptions {
    48→export class Argument {
    62→  constructor(arg: string, description?: string);
    67→  name(): string;
    72→  default(value: unknown, description?: string): this;
    77→  argParser<T>(fn: (value: string, previous: T) => T): this;
    82→  choices(values: readonly string[]): this;
    87→  argRequired(): this;
    92→  argOptional(): this;
    95→export class Option {
   115→  constructor(flags: string, description?: string);
   120→  default(value: unknown, description?: string): this;
   132→  preset(arg: unknown): this;
   144→  conflicts(names: string | string[]): this;
   156→  implies(optionValues: OptionValues): this;
   164→  env(name: string): this;
   169→  argParser<T>(fn: (value: string, previous: T) => T): this;
   174→  makeOptionMandatory(mandatory?: boolean): this;
   179→  hideHelp(hide?: boolean): this;
   184→  choices(values: readonly string[]): this;
   189→  name(): string;
   195→  attributeName(): string;
   200→  helpGroup(heading: string): this;
   207→  isBoolean(): boolean;
   210→export class Help {
   218→  constructor();
   226→  prepareContext(contextOptions: {
   233→  subcommandTerm(cmd: Command): string;
   235→  subcommandDescription(cmd: Command): string;
   237→  optionTerm(option: Option): string;
   239→  optionDescription(option: Option): string;
   241→  argumentTerm(argument: Argument): string;
   243→  argumentDescription(argument: Argument): string;
   246→  commandUsage(cmd: Command): string;
   248→  commandDescription(cmd: Command): string;
   251→  visibleCommands(cmd: Command): Command[];
   253→  visibleOptions(cmd: Command): Option[];
   255→  visibleGlobalOptions(cmd: Command): Option[];
   257→  visibleArguments(cmd: Command): Argument[];
   260→  longestSubcommandTermLength(cmd: Command, helper: Help): number;
   262→  longestOptionTermLength(cmd: Command, helper: Help): number;
   264→  longestGlobalOptionTermLength(cmd: Command, helper: Help): number;
   266→  longestArgumentTermLength(cmd: Command, helper: Help): number;
   269→  displayWidth(str: string): number;
   272→  styleTitle(title: string): string;
   275→  styleUsage(str: string): string;
   277→  styleCommandText(str: string): string;
   279→  styleCommandDescription(str: string): string;
   280→  styleOptionDescription(str: string): string;
   281→  styleSubcommandDescription(str: string): string;
   282→  styleArgumentDescription(str: string): string;
   284→  styleDescriptionText(str: string): string;
   286→  styleOptionTerm(str: string): string;
   287→  styleSubcommandTerm(str: string): string;
   288→  styleArgumentTerm(str: string): string;
   291→  styleOptionText(str: string): string;
   293→  styleSubcommandText(str: string): string;
   295→  styleArgumentText(str: string): string;
   298→  padWidth(cmd: Command, helper: Help): number;
   304→  boxWrap(str: string, width: number): string;
   307→  preformatted(str: string): boolean;
   316→  formatItem(
   317→    term: string,
   318→    termWidth: number,
   319→    description: string,
   320→    helper: Help,
   321→  ): string;
   326→  formatItemList(heading: string, items: string[], helper: Help): string[];
   331→  groupItems<T extends Command | Option>(
   332→    unsortedItems: T[],
   333→    visibleItems: T[],
   334→    getGroup: (item: T) => string,
   335→  ): Map<string, T[]>;
   338→  formatHelp(cmd: Command, helper: Help): string;
   340→export type HelpConfiguration …
   342→export interface ParseOptions {
   345→export interface HelpContext {
   349→export interface AddHelpTextContext {
   354→export interface OutputConfiguration {
   355→  writeOut?(str: string): void;
   356→  writeErr?(str: string): void;
   357→  outputError …
   359→  getOutHelpWidth …
   360→  getErrHelpWidth …
   362→  getOutHasColors …
   363→  getErrHasColors …
   364→  stripColor …
   367→export type AddHelpTextPosition …
   368→export type HookEvent …
   370→export type OptionValueSource …
   374→export type OptionValues …
   376→export class Command {
   384→  constructor …
   398→  version(): string | undefined;
   442→  command(
   443→    nameAndArgs: string,
   444→    description: string,
   445→    opts?: ExecutableCommandOptions,
   446→  ): this;
   454→  createCommand …
   463→  addCommand …
   471→  createArgument …
   493→  argument …
   500→  addArgument …
   514→  arguments …
   528→  helpCommand …
   537→  addHelpCommand …
   542→  hook …
   553→  exitOverride …
   558→  error …
   564→  createHelp …
   572→  configureHelp …
   592→  configureOutput …
   599→  copyInheritedSettings …
   604→  showHelpAfterError …
   609→  showSuggestionAfterError …
   626→  action …
   660→  option …
   685→  requiredOption …
   699→  createOption(flags: string, description?: string): Option;
   706→  addOption(option: Option): this;
   718→  storeOptionsAsProperties …
   723→  getOptionValue(key: string): any;
   728→  setOptionValue(key: string, value: unknown): this;
   733→  setOptionValueWithSource(
   734→    key: string,
   735→    value: unknown,
   736→    source: OptionValueSource,
   737→  ): this;
   742→  getOptionValueSource(key: string): OptionValueSource | undefined;
   747→  getOptionValueSourceWithGlobals(key: string): OptionValueSource | undefined;
   761→  combineFlagAndOptionalValue(combine?: boolean): this;
   768→  allowUnknownOption(allowUnknown?: boolean): this;
   775→  allowExcessArguments(allowExcess?: boolean): this;
   785→  enablePositionalOptions(positional?: boolean): this;
   796→  passThroughOptions(passThrough?: boolean): this;
   819→  parse(argv?: readonly string[], parseOptions?: ParseOptions): this;
   840→  parseAsync(
   841→    argv?: readonly string[],
   842→    parseOptions?: ParseOptions,
   843→  ): Promise<this>;
   851→  saveStateBeforeParse(): void;
   859→  restoreStateBeforeParse(): void;
   873→  parseOptions(argv: string[]): ParseOptionsResult;
   878→  opts<T extends OptionValues>(): T;
   883→  optsWithGlobals<T extends OptionValues>(): T;
   897→  description(): string;
   909→  summary(): string;
   922→  alias(): string;
   935→  aliases(): string[];
   946→  usage(): string;
   957→  name(): string;
   972→  nameFromFilename(filename: string): this;
   990→  executableDir(): string | null;
  1001→  helpGroup(): string;
  1019→  commandsGroup(): string;
  1037→  optionsGroup(): string;
  1047→  outputHelp(cb: (str: string) => string): void;
  1052→  helpInformation(context?: HelpContext): string;
  1059→  helpOption(flags?: string | boolean, description?: string): this;
  1065→  addHelpOption(option: Option): this;
  1074→  help(cb: (str: string) => string): never;
  1083→  addHelpText …
  1091→  on(event: string | symbol, listener: (...args: any[]) => void): this;
  1094→export interface CommandOptions {
  1100→export interface ExecutableCommandOptions extends CommandOptions {
  1104→export interface ParseOptionsResult {
  1113→export const program …
