tests/snapshots/snapshots__budget_commander_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (490 words)

CHANGELOG.md
     1→# Changelog …
CONTRIBUTING.md
     3→## Issues …
    13→## Pull Requests …
Readme.md
     1→# Commander.js
     8→The complete solution for [node.js](http://nodejs.org) command-line interfaces.
     9→
    10→Read this in other languages: English | [简体中文](./Readme_zh-CN.md)
    11→
    12→- [Commander.js](#commanderjs)
    13→  - [Installation](#installation)
    14→  - [Quick Start](#quick-start)
    15→  - [Declaring _program_ variable](#declaring-program-variable)
    16→  - [Options](#options)
      →…
    61→## Installation …
    67→## Quick Start …
   147→## Declaring _program_ variable …
   177→## Options …
   523→## Commands …
   613→#### More configuration …
   625→#### Custom argument processing …
   754→## Automated help …
   956→## Custom event listeners …
   966→## Bits and pieces …
   968→### .parse() and .parseAsync()
   970→Call with no parameters to parse `process.argv`. Detects Electron and special node options like `node --eval`. Easy mode!
   971→
   972→Or, call with an array of strings to parse, and optionally where the user arguments start by specifying where the arguments are `from`:
   973→
      →…
  1164→## Support …
Readme_zh-CN.md
     1→# Commander.js
     8→完整的 [node.js](http://nodejs.org) 命令行解决方案。
     9→
      →…
   907→### .parse() 和 .parseAsync()
   909→`.parse`的第一个参数是要解析的字符串数组，也可以省略参数而使用`process.argv`。
   910→
      →…
docs/deprecated.md
     1→# Deprecated …
   227→## Removed …
   229→### Short option flag longer than a single character
   231→Short option flags like `-ws` were never supported, but the old README did not make this clear. The README now states that short options are a single character.
   232→
   233→- README updated in Commander v3.
   234→- Deprecated from Commander v9.
      →…
docs/help-in-depth.md
     1→# Help in Depth …
    20→## Data Properties …
    34→## Stringify and Style …
   118→## Layout …
docs/options-in-depth.md
     2→# Options in Depth …
    15→## Options taking varying numbers of option-arguments …
   148→## Combining short options, and options taking arguments …
docs/parsing-and-hooks.md
     1→# Parsing life cycle and hooks …
docs/release-policy.md
     1→# Release Policy …
docs/terminology.md
     1→# Terminology …
lib/argument.js
     3→class Argument {
     4→  /**
lib/command.js
    13→class Command extends EventEmitter {
    14→  /**
  1127→  _prepareForParse() {
lib/error.js
     4→class CommanderError extends Error {
     5→  /**
    25→class InvalidArgumentError extends CommanderError {
    26→  /**
lib/help.js
    12→class Help {
    13→  constructor() {
   549→  styleUsage(str) {
   563→  styleCommandDescription(str) {
   566→  styleOptionDescription(str) {
   569→  styleSubcommandDescription(str) {
   572→  styleArgumentDescription(str) {
   575→  styleDescriptionText(str) {
   578→  styleOptionTerm(str) {
   581→  styleSubcommandTerm(str) {
   594→  styleArgumentTerm(str) {
   597→  styleOptionText(str) {
   600→  styleArgumentText(str) {
   603→  styleSubcommandText(str) {
   606→  styleCommandText(str) {
lib/option.js
     3→class Option {
     4→  /**
   268→class DualOptions {
   269→  /**
lib/suggestSimilar.js
     1→const maxDistance = 3;
     3→function editDistance(a, b) {
typings/index.d.ts
    12→type LiteralUnion …
    16→export class CommanderError extends Error {
    31→export class InvalidArgumentError extends CommanderError {
    40→export interface ErrorOptions {
    48→export class Argument {
    95→export class Option {
   210→export class Help {
   340→export type HelpConfiguration = Partial<Help>;
   342→export interface ParseOptions {
   345→export interface HelpContext {
   349→export interface AddHelpTextContext {
   354→export interface OutputConfiguration {
   367→export type AddHelpTextPosition = 'beforeAll' | 'before' | 'after' | 'afterAll';
   368→export type HookEvent = 'preSubcommand' | 'preAction' | 'postAction';
   370→export type OptionValueSource =
   371→  | LiteralUnion<'default' | 'config' | 'env' | 'cli' | 'implied', string>
   372→  | undefined;
   374→export type OptionValues = Record<string, any>;
   376→export class Command {
  1094→export interface CommandOptions {
  1100→export interface ExecutableCommandOptions extends CommandOptions {
  1104→export interface ParseOptionsResult {
  1113→export const program: Command;
