tests/snapshots/snapshots__budget_commander_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (6 words)

argument.js
command.js
error.js
help.js
option.js
suggestSimilar.js
