tests/snapshots/snapshots__budget_commander_level3.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2500 → level 4 (1342 words)

argument.js
     3→class Argument {
     5→   * Initialize a new command argument with the given name and description.
    13→  constructor(name, description) {
    43→   * Return argument name.
    48→  name() {
    53→   * @package
    56→  _collectValue(value, previous) {
    66→   * Set the default value, and optionally supply the description to be displayed in the help.
    73→  default(value, description) {
    80→   * Set the custom handler for processing CLI command arguments into argument values.
    86→  argParser(fn) {
    92→   * Only allow argument value to be one of choices.
    98→  choices(values) {
   115→   * Make argument required.
   119→  argRequired() {
   125→   * Make argument optional.
   129→  argOptional() {
   143→function humanReadableArgName(arg) {
command.js
    13→class Command extends EventEmitter {
    20→  constructor(name) {
    99→  copyInheritedSettings(sourceCommand) {
   121→  _getCommandAndAncestors() {
   155→  command(nameAndArgs, actionOptsOrExecDesc, execOpts) {
   192→  createCommand(name) {
   203→  createHelp() {
   215→  configureHelp(configuration) {
   245→  configureOutput(configuration) {
   261→  showHelpAfterError(displayHelp = true) {
   273→  showSuggestionAfterError(displaySuggestion = true) {
   288→  addCommand(cmd, opts) {
   316→  createArgument(name, description) {
   336→  argument(name, description, parseArg, defaultValue) {
   359→  arguments(names) {
   375→  addArgument(argument) {
   409→  helpCommand(enableOrNameAndArgs, description) {
   443→  addHelpCommand(helpCommand, deprecatedDescription) {
   463→  _getHelpCommand() {
   487→  hook(event, listener) {
   508→  exitOverride(fn) {
   533→  _exit(exitCode, code, message) {
   556→  action(fn) {
   585→  createOption(flags, description) {
   599→  _callParseArg(target, value, previous, invalidArgumentMessage) {
   619→  _registerOption(option) {
   644→  _registerCommand(command) {
   670→  addOption(option) {
   741→  _optionEx(config, flags, description, fn, defaultValue) {
   788→  option(flags, description, parseArg, defaultValue) {
   805→  requiredOption(flags, description, parseArg, defaultValue) {
   826→  combineFlagAndOptionalValue(combine = true) {
   837→  allowUnknownOption(allowUnknown = true) {
   848→  allowExcessArguments(allowExcess = true) {
   861→  enablePositionalOptions(positional = true) {
   875→  passThroughOptions(passThrough = true) {
   885→  _checkForBrokenPassThrough() {
   905→  storeOptionsAsProperties(storeAsProperties = true) {
   925→  getOptionValue(key) {
   940→  setOptionValue(key, value) {
   953→  setOptionValueWithSource(key, value, source) {
   971→  getOptionValueSource(key) {
   983→  getOptionValueSourceWithGlobals(key) {
  1001→  _prepareUserArgs(argv, parseOptions) {
  1090→  parse(argv, parseOptions) {
  1119→  async parseAsync(argv, parseOptions) {
  1127→  _prepareForParse() {
  1141→  saveStateBeforeParse() {
  1158→  restoreStateBeforeParse() {
  1183→  _checkForMissingExecutable(executableFile, executableDir, subcommandName) {
  1202→  _executeSubCommand(subcommand, args) {
  1352→  _dispatchSubcommand(commandName, operands, unknown) {
  1380→  _dispatchHelpCommand(subcommandName) {
  1403→  _checkNumberOfArguments() {
  1428→  _processArguments() {
  1481→  _chainOrCall(promise, fn) {
  1499→  _chainOrCallHooks(promise, event) {
  1531→  _chainOrCallSubCommandHook(promise, subCommand, event) {
  1550→  _parseCommand(operands, unknown) {
  1649→  _findCommand(name) {
  1664→  _findOption(arg) {
  1675→  _checkForMissingMandatoryOptions() {
  1694→  _checkForConflictingLocalOptions() {
  1723→  _checkForConflictingOptions() {
  1748→  parseOptions(args) {
  1902→  opts() {
  1924→  optsWithGlobals() {
  1940→  error(message, errorOptions) {
  1966→  _parseOptionsEnv() {
  1996→  _parseOptionsImplied() {
  2034→  missingArgument(name) {
  2046→  optionMissingArgument(option) {
  2058→  missingMandatoryOptionValue(option) {
  2070→  _conflictingOption(option, conflictingOption) {
  2114→  unknownOption(flag) {
  2146→  _excessArguments(receivedArgs) {
  2162→  unknownCommand() {
  2195→  version(str, flags, description) {
  2218→  description(str, argsDescription) {
  2234→  summary(str) {
  2249→  alias(alias) {
  2289→  aliases(aliases) {
  2304→  usage(str) {
  2331→  name(str) {
  2344→  helpGroup(heading) {
  2363→  commandsGroup(heading) {
  2382→  optionsGroup(heading) {
  2392→  _initOptionGroup(option) {
  2401→  _initCommandGroup(cmd) {
  2419→  nameFromFilename(filename) {
  2437→  executableDir(path) {
  2450→  helpInformation(contextOptions) {
  2475→  _getOutputContext(contextOptions) {
  2505→  outputHelp(contextOptions) {
  2559→  helpOption(flags, description) {
  2592→  _getHelpOption() {
  2607→  addHelpOption(option) {
  2621→  help(contextOptions) {
  2656→  addHelpText(position, text) {
  2686→  _outputHelpIfRequested(args) {
  2705→function incrementNodeInspectorPort(args) {
  2752→function useColor() {
error.js
     4→class CommanderError extends Error {
     5→  /**
     6→   * Constructs the CommanderError class
     7→   * @param {number} exitCode suggested exit code which could be used with process.exit
     8→   * @param {string} code an id string representing the error
     9→   * @param {string} message human-readable description of the error
    10→   */
    11→  constructor(exitCode, code, message) {
    25→class InvalidArgumentError extends CommanderError {
    26→  /**
    27→   * Constructs the InvalidArgumentError class
    28→   * @param {string} [message] explanation of why argument is invalid
    29→   */
    30→  constructor(message) {
help.js
    12→class Help {
    13→  constructor() {
    22→   * prepareContext is called by Commander after applying overrides from `Command.configureHelp()`
    29→  prepareContext(contextOptions) {
    34→   * Get an array of the visible subcommands. Includes a placeholder for the implicit help command, if there is one.
    40→  visibleCommands(cmd) {
    56→   * Compare options for sort.
    62→  compareOptions(a, b) {
    73→   * Get an array of the visible options. Includes a placeholder for the implicit help option, if there is one.
    79→  visibleOptions(cmd) {
   106→   * Get an array of the visible global options. (Not including help.)
   112→  visibleGlobalOptions(cmd) {
   133→   * Get an array of the arguments if any have a description.
   139→  visibleArguments(cmd) {
   156→   * Get the command term to show in the list of subcommands.
   162→  subcommandTerm(cmd) {
   176→   * Get the option term to show in the list of options.
   182→  optionTerm(option) {
   187→   * Get the argument term to show in the list of arguments.
   193→  argumentTerm(argument) {
   198→   * Get the longest command term length.
   205→  longestSubcommandTermLength(cmd, helper) {
   217→   * Get the longest option term length.
   224→  longestOptionTermLength(cmd, helper) {
   234→   * Get the longest global option term length.
   241→  longestGlobalOptionTermLength(cmd, helper) {
   251→   * Get the longest argument term length.
   258→  longestArgumentTermLength(cmd, helper) {
   270→   * Get the command usage to be displayed at the top of the built-in help.
   276→  commandUsage(cmd) {
   294→   * Get the description for the command.
   300→  commandDescription(cmd) {
   306→   * Get the subcommand summary to show in the list of subcommands.
   313→  subcommandDescription(cmd) {
   319→   * Get the option description to show in the list of options.
   325→  optionDescription(option) {
   366→   * Get the argument description to show in the list of arguments.
   372→  argumentDescription(argument) {
   396→   * Format a list of items, given a heading and an array of formatted items.
   403→  formatItemList(heading, items, helper) {
   410→   * Group items by their help group heading.
   417→  groupItems(unsortedItems, visibleItems, getGroup) {
   436→   * Generate the built-in help text.
   443→  formatHelp(cmd, helper) {
   530→   * Return display width of string, ignoring ANSI escape sequences. Used in padding and wrapping calculations.
   535→  displayWidth(str) {
   540→   * Style the title for displaying in the help. Called with 'Usage:', 'Options:', etc.
   545→  styleTitle(str) {
   549→  styleUsage(str) {
   563→  styleCommandDescription(str) {
   566→  styleOptionDescription(str) {
   569→  styleSubcommandDescription(str) {
   572→  styleArgumentDescription(str) {
   575→  styleDescriptionText(str) {
   578→  styleOptionTerm(str) {
   581→  styleSubcommandTerm(str) {
   594→  styleArgumentTerm(str) {
   597→  styleOptionText(str) {
   600→  styleArgumentText(str) {
   603→  styleSubcommandText(str) {
   606→  styleCommandText(str) {
   611→   * Calculate the pad width from the maximum term length.
   618→  padWidth(cmd, helper) {
   628→   * Detect manually wrapped and indented strings by checking for line break followed by whitespace.
   633→  preformatted(str) {
   638→   * Format the "item", which consists of a term and description. Pad the term and wrap the description, indenting the following lines.
   650→  formatItem(term, termWidth, description, helper) {
   688→   * Wrap a string at whitespace, preserving existing line breaks.
   695→  boxWrap(str, width) {
   740→function stripColor(str) {
option.js
     3→class Option {
     5→   * Initialize a new `Option` with the given `flags` and `description`.
    11→  constructor(flags, description) {
    40→   * Set the default value, and optionally supply the description to be displayed in the help.
    47→  default(value, description) {
    54→   * Preset to use when option used without option-argument, especially optional but also boolean and negated.
    65→  preset(arg) {
    71→   * Add option name(s) that conflict with this option.
    82→  conflicts(names) {
    88→   * Specify implied option values for when this option is set and the implied options are not.
   100→  implies(impliedOptionValues) {
   111→   * Set environment variable to check for option value.
   120→  env(name) {
   126→   * Set the custom handler for processing CLI option arguments into option values.
   132→  argParser(fn) {
   138→   * Whether the option is mandatory and must have a value after parsing.
   144→  makeOptionMandatory(mandatory = true) {
   150→   * Hide option in help.
   156→  hideHelp(hide = true) {
   162→   * @package
   165→  _collectValue(value, previous) {
   175→   * Only allow option value to be one of choices.
   181→  choices(values) {
   198→   * Return option name.
   203→  name() {
   211→   * Return option name, in a camelcase format that can be used
   217→  attributeName() {
   225→   * Set the help group heading.
   230→  helpGroup(heading) {
   236→   * Check if `arg` matches the short or long flag.
   243→  is(arg) {
   248→   * Return whether a boolean option.
   256→  isBoolean() {
   268→class DualOptions {
   270→   * @param {Option[]} options
   272→  constructor(options) {
   291→   * Did the value come from the option, and not from possible matching dual option?
   297→  valueFromOption(value, option) {
   316→function camelcase(str) {
   328→function splitOptionFlags(flags) {
suggestSimilar.js
     1→const maxDistance = 3;
     3→function editDistance(a, b) {
    56→function suggestSimilar(word, candidates) {
