tests/snapshots/snapshots__budget_commander_lib_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (999 tokens)

argument.js
    13→  constructor(name, description) {
    48→  name() {
    73→  default(value, description) {
    86→  argParser(fn) {
    98→  choices(values) {
   119→  argRequired() {
   129→  argOptional() {

command.js
   983→  getOptionValueSourceWithGlobals(key) {
  1090→  parse(argv, parseOptions) {
  1119→  async parseAsync(argv, parseOptions) {
  1141→  saveStateBeforeParse() {
  1158→  restoreStateBeforeParse() {
  1748→  parseOptions(args) {
  1902→  opts() {
  1924→  optsWithGlobals() {
  1940→  error(message, errorOptions) {
  2034→  missingArgument(name) {
  2046→  optionMissingArgument(option) {
  2058→  missingMandatoryOptionValue(option) {
  2114→  unknownOption(flag) {
  2162→  unknownCommand() {
  2195→  version(str, flags, description) {
  2218→  description(str, argsDescription) {
  2234→  summary(str) {
  2249→  alias(alias) {
  2289→  aliases(aliases) {
  2304→  usage(str) {
  2331→  name(str) {
  2344→  helpGroup(heading) {
  2363→  commandsGroup(heading) {
  2382→  optionsGroup(heading) {
  2419→  nameFromFilename(filename) {
  2437→  executableDir(path) {
  2450→  helpInformation(contextOptions) {
  2505→  outputHelp(contextOptions) {
  2559→  helpOption(flags, description) {
  2607→  addHelpOption(option) {
  2621→  help(contextOptions) {
  2656→  addHelpText(position, text) {

error.js
    11→  constructor(exitCode, code, message) {
    30→  constructor(message) {

help.js
    29→  prepareContext(contextOptions) {
    40→  visibleCommands(cmd) {
    62→  compareOptions(a, b) {
    79→  visibleOptions(cmd) {
   112→  visibleGlobalOptions(cmd) {
   139→  visibleArguments(cmd) {
   162→  subcommandTerm(cmd) {
   182→  optionTerm(option) {
   193→  argumentTerm(argument) {
   205→  longestSubcommandTermLength(cmd, helper) {
   224→  longestOptionTermLength(cmd, helper) {
   241→  longestGlobalOptionTermLength(cmd, helper) {
   258→  longestArgumentTermLength(cmd, helper) {
   276→  commandUsage(cmd) {
   300→  commandDescription(cmd) {
   313→  subcommandDescription(cmd) {
   325→  optionDescription(option) {
   372→  argumentDescription(argument) {
   403→  formatItemList(heading, items, helper) {
   417→  groupItems(unsortedItems, visibleItems, getGroup) {
   443→  formatHelp(cmd, helper) {
   535→  displayWidth(str) {
   545→  styleTitle(str) {
   618→  padWidth(cmd, helper) {
   633→  preformatted(str) {
   650→  formatItem(term, termWidth, description, helper) {
   695→  boxWrap(str, width) {
   740→function stripColor(str) {

option.js
    11→  constructor(flags, description) {
    47→  default(value, description) {
    65→  preset(arg) {
    82→  conflicts(names) {
   100→  implies(impliedOptionValues) {
   120→  env(name) {
   132→  argParser(fn) {
   144→  makeOptionMandatory(mandatory = true) {
   156→  hideHelp(hide = true) {
   181→  choices(values) {
   203→  name() {
   217→  attributeName() {
   230→  helpGroup(heading) {
   243→  is(arg) {
   256→  isBoolean() {
   268→class DualOptions {
   272→  constructor(options) {
   297→  valueFromOption(value, option) {
